--- a/style.css
+++ b/style.css
@@ -342,5 +342,42 @@ padding-left: 300px;
 padding-top: 20px;
 }
 .spacer{width: 100%;
-padding: 40px;
-background-color: red;}
+padding: 100px;
+}
+
+.gallery{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+
+
+}
+.column {
+flex: 25%;
+max-width: 25%:
+
+}
+.column img{
+margin: 5px;
+  vertical-align: middle;
+  width: 100%;
+
+}
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
