--- a/style.css
+++ b/style.css
@@ -105,8 +105,101 @@ opacity: 0;
       opacity: 1; }
 }
 
+.about {
+  background-color: #a77d43;
+  color: white;
+
+  padding: 150px;
+  display: flex;
+  justify-content: center;
+margin-top: 10%;
+margin-bottom: 10%;
+  font-family: 'Montserrat', sans-serif;
+}
+.about-title ul{
+list-style: none;
+text-align: left;
+}
+
+.about-title li h2 {
+  text-align: right;
+  margin-top: 10%;
+  font-size: 70px;
+}
+.about-text {
+  text-align: left;
+display: flex;
+align-items: center;
+width: 30%;
+padding-left: 200px;
+}
 
 
+
+.contact{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color:  #a77d43;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
+padding-top:100px;
+padding-bottom:100px;
+}
+.contact h1{
+  margin-bottom: 5%;
+  text-align: center;
+}
+
+.contact2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  background-color:  #a77d43;
+
+}
+.map h2{
+margin-bottom: 3%;
+}
+.contact-form{
+margin-left: 5%;
+  width: 900px;
+}
+.contact-form h2{
+margin-bottom: 3%;
+}
+
+.input-text{
+  width: 100%;
+  height: 50px;
+    font-size: 15px;
+  text-align: center;
+}
+.contact-form textarea{
+  height: auto;
+  resize: none;
+    font-size: 15px;
+}
+.contact-form form{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.buttonHolder{
+  text-align: center;
+}
+.submit{
+  background-color: #008CBA;
+  border:blue;
+  border-radius: 20px;
+  color: white;
+  width: 200px;
+  height: 40px;
+  margin-top: 3%;
+}
 
 
 
@@ -299,13 +392,14 @@ flex-direction: column;
 }
 .headtitle {
     font-family: 'Montserrat', sans-serif;
-
+visibility: hidden;
 width: 60%;
   padding: 10px;
     text-align: center;
 margin-top: 10%;
 }
 .headtitle p{
+
   margin-top: 3%;
 }
 .container{
@@ -317,33 +411,38 @@ width: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
+
   margin-top: 8%;
     font-family: 'Montserrat', sans-serif;
 }
-.prices{
-  width: 60%;
-  padding: 10px;
-    text-align: center;
-}
+
 .prices-container h2{
   font-size: 25px;
+  text-align: center;
 }
 .prices-container table{
 margin-top: 3%;
 display: flex;
-justify-content: flex-start;
+width: 100%;
 }
 .prices-container th{
-padding-top: 3%;
+padding-top: 10%;
+text-align: center;
 padding-bottom: 3%;
 }
 .prices-container td{
-padding-left: 300px;
-padding-top: 20px;
+padding-top: 10%;
+width: 100%;
 }
+tbody{
+  width: 1000px;
+
+}
+
 .spacer{width: 100%;
 padding: 100px;
 }
+
 
 .gallery{
   display: flex;
