--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-  margin:0;
-  padding:0;
+margin: 0;
+padding: 0;
    box-sizing: border-box;
 }
 body{
@@ -17,7 +17,8 @@ footer{
 .bg-img{
   background-image: url("images/spahead.jpg");
   min-height:900px;
-
+margin: 0;
+padding: 0;
 
   background-position: center;
 
@@ -265,19 +266,18 @@ animation: scroll-ind 2s infinite;
 
 
 
-
 .navbar {
 
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    padding-bottom: 10px;
+
 position: fixed;
 z-index: 1;
 background: white;
 width: 100%;
-
 }
+
 .main-nav {
     list-style-type: none;
 
@@ -287,17 +287,19 @@ width: 100%;
     text-decoration: none;
     color: black;
 }
-.nav-links:hover{
+nav li:hover{
   color: green;
-
+  background-color: black;
 }
+
 .logo img{
   width:274.5px;
   height:61.5px;
 }
 
 .main-nav li {
-padding: 40px;
+padding: 25px;
+margin: 0;
     text-align: center;
 }
 .navbar li a{
@@ -320,9 +322,15 @@ padding: 40px;
 .main-nav {
     list-style-type: none;
     display: none;
+
 }
+
 .active {
   display: block;
+  height: 100%;
+}
+nav .active{
+  height: 100vh;
 }
 
 
@@ -394,11 +402,14 @@ width: 100%;
   display: flex;
   justify-content: center;
 }
+.prices{
+  visibility: hidden;
+}
 .prices-container{
   width: 100%;
   display: flex;
   justify-content: center;
-
+visibility: hidden;
   margin-top: 8%;
     font-family: 'Montserrat', sans-serif;
 }
@@ -473,7 +484,7 @@ margin: 5px;
         display: flex;
         justify-content: space-between;
         padding-bottom: 0;
-        height: 70px;
+        height: 120px;
         align-items: center;
     }
     .main-nav {
@@ -484,6 +495,7 @@ margin: 5px;
     }
     .main-nav li {
         margin: 0;
+        padding: 50px;
     }
     .nav-links {
         margin-left: 40px;
