--- a/style.css
+++ b/style.css
@@ -288,8 +288,8 @@ width: 100%;
     color: black;
 }
 nav li:hover{
-  color: green;
-  background-color: black;
+
+  background-color: #dfdedd;
 }
 
 .logo img{
@@ -298,9 +298,10 @@ nav li:hover{
 }
 
 .main-nav li {
-padding: 25px;
+padding: 20px;
 margin: 0;
     text-align: center;
+     transition:all 1s ease;
 }
 .navbar li a{
   margin: 0;
@@ -441,43 +442,48 @@ tbody{
 padding: 100px;
 }
 
-
 .gallery{
   display: flex;
   justify-content: center;
-  text-align: center;
-}
-.row{
-  display: flex;
-  flex-wrap: wrap;
-
-
-}
-.column {
-flex: 25%;
-max-width: 25%:
-
 }
 .column img{
-margin: 5px;
-  vertical-align: middle;
+  width: 600px;
+  height: 600px;
+  margin: 5px;
+  transition: all .2s ease-in-out;
   width: 100%;
+  height: auto;
+}
+.column img:hover{
+transform: scale(1.01);
 
 }
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
+.responsive {
+  padding: 0 6px;
+  float: left;
+  display: flex;
+  justify-content: center;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
   }
 }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
   }
 }
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 
 @media screen and (min-width: 1169px) {
     .navbar {
@@ -495,7 +501,7 @@ margin: 5px;
     }
     .main-nav li {
         margin: 0;
-        padding: 50px;
+        padding: 48px;
     }
     .nav-links {
         margin-left: 40px;
@@ -506,8 +512,5 @@ margin: 5px;
    .navbar-toggle {
        display: none;
     }
-    .logo:hover,
-    .nav-links:hover {
-        color:green;
-    }
+
   }
